Fixes grunt file to generate admin css properly

--- a/admin/css/syllabus-manager-admin.css
+++ b/admin/css/syllabus-manager-admin.css
@@ -1,94 +1,3 @@
-/**
- * All of the CSS for your admin-specific functionality should be
- * included in this file.
- */
+body{background-color:#f1f1f1 !important}#soc-table .no-data{font-style:italic;color:#999}#soc-table .bg-success{background-color:#f1f1f1}.glyphicon.fast-right-spinner{animation:glyphicon-spin-r 1s infinite linear}.glyphicon.normal-right-spinner{animation:glyphicon-spin-r 2s infinite linear}.glyphicon.slow-right-spinner{animation:glyphicon-spin-r 3s infinite linear}.glyphicon.fast-left-spinner{animation:glyphicon-spin-l 1s infinite linear}.glyphicon.normal-left-spinner{animation:glyphicon-spin-l 2s infinite linear}.glyphicon.slow-left-spinner{animation:glyphicon-spin-l 3s infinite linear}@keyframes glyphicon-spin-r{0%{transform:rotate(0deg)}100%{transform:rotate(359deg)}}@keyframes glyphicon-spin-l{0%{transform:rotate(359deg)}100%{transform:rotate(0deg)}}
 
-body{
-    background-color: #f1f1f1 !important;
-}
-#soc-table .no-data {
-    font-style: italic;
-    color: #999;
-}
-#soc-table .bg-success {
-    background-color: #dff0d8;
-}
-
-.glyphicon.fast-right-spinner {
-    -webkit-animation: glyphicon-spin-r 1s infinite linear;
-    animation: glyphicon-spin-r 1s infinite linear;
-}
-
-.glyphicon.normal-right-spinner {
-    -webkit-animation: glyphicon-spin-r 2s infinite linear;
-    animation: glyphicon-spin-r 2s infinite linear;
-}
-
-.glyphicon.slow-right-spinner {
-    -webkit-animation: glyphicon-spin-r 3s infinite linear;
-    animation: glyphicon-spin-r 3s infinite linear;
-}
-
-.glyphicon.fast-left-spinner {
-    -webkit-animation: glyphicon-spin-l 1s infinite linear;
-    animation: glyphicon-spin-l 1s infinite linear;
-}
-
-.glyphicon.normal-left-spinner {
-    -webkit-animation: glyphicon-spin-l 2s infinite linear;
-    animation: glyphicon-spin-l 2s infinite linear;
-}
-
-.glyphicon.slow-left-spinner {
-    -webkit-animation: glyphicon-spin-l 3s infinite linear;
-    animation: glyphicon-spin-l 3s infinite linear;
-}
-
-@-webkit-keyframes glyphicon-spin-r {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-
-    100% {
-        -webkit-transform: rotate(359deg);
-        transform: rotate(359deg);
-    }
-}
-
-@keyframes glyphicon-spin-r {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-
-    100% {
-        -webkit-transform: rotate(359deg);
-        transform: rotate(359deg);
-    }
-}
-
-@-webkit-keyframes glyphicon-spin-l {
-    0% {
-        -webkit-transform: rotate(359deg);
-        transform: rotate(359deg);
-    }
-
-    100% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-}
-
-@keyframes glyphicon-spin-l {
-    0% {
-        -webkit-transform: rotate(359deg);
-        transform: rotate(359deg);
-    }
-
-    100% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-}
-
+/*# sourceMappingURL=syllabus-manager-admin.css.map */
