--- a/public/css/syllabus-manager-public.css
+++ b/public/css/syllabus-manager-public.css
@@ -1,3 +1,36 @@
-#syllabus-main-wrap .container,#syllabus-main-wrap #main.syllabus-main-content{width:1220px;max-width:1220px}@media screen and (min-width: 768px){#syllabus-main-wrap #main.syllabus-main-content{padding-left:0;padding-right:0}}.syllabus-table .list-inline{margin-bottom:0}.syllabus-table .list-inline li{text-transform:none}.syllabus-table .list-inline li:before{content:none;margin-right:0}@media screen and (min-width: 992px){.syllabus-table .syllabus-title{width:35%}}@media screen and (max-width: 1219px){.syllabus-table .syllabus-level{display:none}}@media screen and (max-width: 1439px){.syllabus-table .syllabus-dept{display:none}}
+/**
+ * All of the CSS for your public-facing functionality should be
+ * included in this file.
+ */
+#syllabus-main-wrap .container, #syllabus-main-wrap #main.syllabus-main-content {
+  width: 1220px;
+  max-width: 1220px; }
+
+@media screen and (min-width: 768px) {
+  #syllabus-main-wrap #main.syllabus-main-content {
+    padding-left: 0;
+    padding-right: 0; } }
+
+.syllabus-table .list-inline {
+  margin-bottom: 0; }
+  .syllabus-table .list-inline li {
+    text-transform: none; }
+  .syllabus-table .list-inline li:before {
+    content: none;
+    margin-right: 0; }
+
+@media screen and (min-width: 992px) {
+  .syllabus-table .syllabus-title {
+    width: 35%; } }
+
+@media screen and (max-width: 1219px) {
+  .syllabus-table .syllabus-level {
+    display: none; } }
+
+@media screen and (max-width: 1439px) {
+  .syllabus-table .syllabus-dept {
+    display: none; } }
+
+/* something */
 
 /*# sourceMappingURL=syllabus-manager-public.css.map */
