--- a/admin/sass/_admin.scss
+++ b/admin/sass/_admin.scss
@@ -52,7 +52,7 @@ body{
 		margin: 0;
 	}
 }
-.sm-table {
+.sm-faux-table {
 	& > div {
 		padding: $grid_gutter_width/2;
 		margin-bottom: $grid_gutter_width/2;
@@ -75,12 +75,42 @@ body{
 		}
 	}
 }
-.sm-courses {
-	@extend .sm-table;
+
+#sm-courses-group {
+	.panel-title-uparrow, .panel-title-down-arrow {
+		float: left;
+		font-family: 'Glyphicons Halflings';
+		margin-right :1em;
+	}
+	.panel-title-uparrow {
+		content:"\e113";
+	}
+	.panel-title-downarrow {
+		content:"\e114";
+	}
 	
-	.sm-course {
-		background-color: $gray_lt;
+	.panel-title > a {
+		display: block;
+		outline: none;
+		font-weight: bold;
+		padding: $grid_gutter_width/4 0;
+		color: #23527c;
+		
+		&:active, &:focus, &:hover {
+			text-decoration: none;
+			box-shadow: none;
+			color: #0096dd;
+		}
 	}
-	.sm-course > div {
+	
+	.panel-title a[data-toggle="collapse"]::before{
+		@extend .panel-title-uparrow;
 	}
+	.panel-title a.collapsed[data-toggle="collapse"]::before{
+		@extend .panel-title-downarrow;
+	}
+}
+
+.sm-sections {
+	@extend .sm-faux-table;
 }
