--- a/admin/css/syllabus-manager-admin.css
+++ b/admin/css/syllabus-manager-admin.css
@@ -76,11 +76,11 @@ body {
   outline: none;
   font-weight: bold;
   padding: 7.5px 0 7.5px 30px;
-  color: #23527c; }
+  color: blue; }
   #sm-courses-group .panel-title > a:active, #sm-courses-group .panel-title > a:focus, #sm-courses-group .panel-title > a:hover {
     text-decoration: none;
     box-shadow: none;
-    color: #0096dd; }
+    color: blue; }
 
 .sm-sections .sm-section {
   width: calc(100%/8); }
