--- a/admin/sass/_admin.scss
+++ b/admin/sass/_admin.scss
@@ -93,12 +93,12 @@ body{
 		outline: none;
 		font-weight: bold;
 		padding: $grid_gutter_width/4 0 $grid_gutter_width/4 $grid_gutter_width;
-		color: $blue_dk;
+		color: blue;
 		
 		&:active, &:focus, &:hover {
 			text-decoration: none;
 			box-shadow: none;
-			color: $blue;
+			color: blue;
 		}
 	}
 	
