--- a/admin/sass/_variables.scss
+++ b/admin/sass/_variables.scss
@@ -1,6 +1,10 @@
 $gray_lt: #f1f1f1;
+$gray_dk: #333;
 $gray: #999;
 $green: #dff0d8;
+$blue: #00529b;
+$orange: #f37021;
+
 
 $color_admin_bg: $gray_lt;
 $color_success_bg: $green;
