--- a/public/css/syllabus-manager-public.css
+++ b/public/css/syllabus-manager-public.css
@@ -18,17 +18,29 @@
   width: 100%;
   z-index: 1; }
 
+@media screen and (min-width: 768px) {
+  .sm-breaker::before, .tax-syllabus_department .sm-header::before, .sm-breaker::after, .tax-syllabus_department .sm-header::after {
+    position: absolute;
+    width: 100%;
+    z-index: 5;
+    content: '';
+    display: block;
+    left: 0;
+    height: 40px; }
+  .sm-breaker::before, .tax-syllabus_department .sm-header::before {
+    background-image: url("https://sites.clas.ufl.edu/wp-content/themes/ufclas-ufl-2015/img/edge-bottom.png");
+    background-position: top center;
+    bottom: 0; } }
+
 .tax-syllabus_department .sm-header {
   background-color: #00529b;
   background-repeat: no-repeat;
-  background-image: url("/wp-content/uploads/temp2-1024x683.jpeg");
-  background-image: url("http://languages.ufl.edu/files/hp-05.jpg");
   background-size: cover;
   position: relative;
   margin: 0 0 30px; }
   @media screen and (min-width: 992px) {
     .tax-syllabus_department .sm-header {
-      margin: 30px 0; } }
+      margin: 30px 0 0; } }
   @media screen and (min-width: 1220px) {
     .tax-syllabus_department .sm-header {
       min-height: 350px; } }
@@ -37,7 +49,7 @@
   padding: 30px; }
   @media screen and (min-width: 768px) {
     .tax-syllabus_department .sm-header-content {
-      padding: 60px; } }
+      padding: 60px 60px 90px; } }
   .tax-syllabus_department .sm-header-content .breadcrumb-wrap a {
     color: #fff !important;
     text-shadow: 0 3px 2px rgba(0, 0, 0, 0.4); }
@@ -56,10 +68,10 @@
     font-weight: 500;
     font-size: 16px;
     letter-spacing: 1px;
-    background-color: rgba(0, 0, 0, 0.3);
     border: 2px solid rgba(255, 255, 255, 0.8);
-    color: #fff; }
-  .tax-syllabus_department .sm-header-nav li > a:hover {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.3); }
+  .tax-syllabus_department .sm-header-nav li > a:hover, .tax-syllabus_department .sm-header-nav li > a:active, .tax-syllabus_department .sm-header-nav li > a:focus {
     border-color: #a8dcd9;
     background-color: #337ab7; }
   .tax-syllabus_department .sm-header-nav li.active > a:before {
@@ -130,6 +142,11 @@
     width: 100%; }
   #sm-hero form .row {
     margin-bottom: 0; }
+
+@media screen and (min-width: 768px) {
+  #sm-archive-table {
+    margin-left: 15px;
+    margin-right: 15px; } }
 
 #sm-archive-table a {
   font-weight: 500; }
