--- a/public/sass/_public.scss
+++ b/public/sass/_public.scss
@@ -4,22 +4,6 @@
 	}
 }
 
-.gradient-bg {
-	&::before {
-		background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.5)), to(transparent));
-		background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent);
-		bottom: 0;
-		content: '';
-		display: block;
-		height: 70%;
-		left: 0;
-		pointer-events: none;
-		position: absolute;
-		width: 100%;
-		z-index: 1;
-	}
-}
-
 .sm-breaker {
 	@media screen and (min-width: $screen-sm){
 		&::before, &::after {
@@ -55,6 +39,11 @@
 		}
 		@media screen and (min-width: $screen-lg){
 			min-height: 350px;
+		}
+		
+		h1.page-title {
+			color: $white;
+			text-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
 		}
 	}
 	.sm-header-content {
@@ -123,31 +112,25 @@
 			}
 		}
 	}
-	h1.page-title {
-		color: $white;
-		text-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
-	}
 }
 
-#syllabus-main-wrap {
+#main.main-content.syllabus-main-content {
 	
-	#main.syllabus-main-content {
-		padding-top: 0;
-		
-		@media screen and (min-width: $screen-sm){ 
-			padding-left: 0;
-			padding-right: 0;
-		}
-		@media screen and (min-width: $screen-md){ 
-			padding-top: 30px;
-		}
-		@media screen and (min-width: $screen-xl){ 
-			width: $screen-lg;
-			max-width: $screen-lg;
-		}
+	padding-top: 0;
+
+	@media screen and (min-width: $screen-sm){ 
+		padding-left: 0;
+		padding-right: 0;
 	}
-	
-	.dataTables_filter {
+	@media screen and (min-width: $screen-md){ 
+		padding-top: 30px;
+	}
+	@media screen and (min-width: $screen-xl){ 
+		width: $screen-lg;
+		max-width: $screen-lg;
+	}
+
+	.dataTables_filter { 
 		text-align: left;	
 	}
 	.dataTables_length {
